refactor: write rust rollup plugin in ts
Former-commit-id: 8bf6655f0003afb2a8fff3f8c5a8eb23aa87e1a1 [formerly aee93717a662c0ae21b96dccf231cb29b1b4a6e9] [formerly ab20720df2359ab98133f089c6ea8ccee74d033f [formerly 467ba43d73dd4e7b4043fb6631465c22e00981f4]] [formerly 64c0b43d0b728d4c8d6115ad2bb5e6928a823a49 [formerly 4eca978d324065150cd5468065ab9c9502ddd7a1] [formerly 4d8a760b2c71198421e82160762e28bdd897cae4 [formerly 0d6280eb95ba427067ed2621524f66a595c57ba7]]]
Former-commit-id: 62f32362a978da85b148e9c175ec1c480b3b78ad [formerly 7a6d5849bebe228dd88b92a47b361ae9f4d17cad] [formerly f2ef4676fd0d90c5f42dcb7911eedb0209d9d67a [formerly 574679c98ec929a83481cb02d0e54e9530a634c5]]
Former-commit-id: 398710851df16410b507e98eb6de6e6c0416440c [formerly 142de987c50599086a75a027f9b42c80a59ba891]
Former-commit-id: 30dd960704628dd3422ea02b78a4447aee6e3c08

--- a/packages/rollup-plugin-rust/demo/index.html
+++ b/packages/rollup-plugin-rust/demo/index.html
@@ -7,7 +7,7 @@
     <script src="dist/index.js"></script>
     <h1>
       <script>
-        zkitHelloWasm().then(({ greet }) => greet("Wasm"))
+        zkKitHelloWasm().then(({ greet }) => greet("Wasm"))
       </script>
     </h1>
   </body>
